# biokb_coconut

./: .env_template  .gitignore  Dockerfile  README.md  docker-compose.yml  mkdocs.yml  pyproject.toml  tox.ini
docs/: api.md  cli.md  how_to_run_neo4j.md  index.md  installation.md  models.md  run_the_pipeline.md
docs/notebooks/: erdiagram.ipynb  query_examples.ipynb  test_workflow.ipynb  test_workflow_podman.ipynb
notebooks/: compounds.xlsx  erdiagram.ipynb  load_data.ipynb  test_data.ipynb  test_import.ipynb  test_query.ipynb  test_workflow.ipynb  test_workflow_podman.ipynb
src/biokb_coconut/: __init__.py  cli.py  constants.py
src/biokb_coconut/api/: main.py  query_tools.py  schemas.py  tags.py
src/biokb_coconut/db/: manager.py  models.py
src/biokb_coconut/rdf/: namespaces.py  neo4j_importer.py  turtle.py
tests/: test_api.py
