[project]
name = "biokb_coconut"
version = "0.1.0"
description = "API for Coconut"
authors = [
    {name = "Christian Ebeling", email = "Christian.Ebeling@scai.fraunhofer.de"},
]
dependencies = [
    "cryptography>=45.0.5",
    "fastapi[standard]>=0.116.1",
    "pandas>=2.3.1",
    "pymysql>=1.1.1",
    "requests>=2.32.4",
    "sqlalchemy>=2.0.41",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true

[dependency-groups]
docs = [
    "eralchemy[graphviz]>=1.5.0",
]
